Fix sidebar heading collapse button margin

--- a/Libadwaita/styles/sidebar.less
+++ b/Libadwaita/styles/sidebar.less
@@ -60,6 +60,10 @@
 			background-color: @text_color;
 		}
 	}
+
+	.collapse-button {
+		margin-right: 24px;
+	}
 }
 
 //------------------------------------------------------------
